оформил блок преимуществ
под вопросом остается правильность оформления параметров цвета.

--- a/index.html
+++ b/index.html
@@ -52,16 +52,75 @@
       </div> 
     </section>
 
-    <!-- section Преимущества компании conteiner -->
+
+    <!-- Преимущества компании -->
     <section class="features">
       <div class="conteiner">
-        <!-- данный заголовок не отображается в браузере -->
+        <h2 class="is-hidden"> <!-- данный заголовок не отображается в браузере но в потоке -->
+          Преимущества нашей компании
+        </h2>
+        <ul class="features-list"> 
+          <li class="features-item">
+            <div class="features-icon-block">
+              <svg class="features-icon" width="70" height="70">
+                <use href="./images/sprite.svg#icon-features-antenna"></use>
+              </svg>
+            </div>
+            <h3>Внимание к деталям</h3>
+            <p class="par-txt">
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li class="features-item">
+            <div class="features-icon-block">
+              <svg class="" width="70px" height="70px">
+                <use href="./images/sprite.svg#icon-features-astronaut"></use>
+              </svg>
+            </div>
+            <h3>Пунктуальность</h3>
+            <p class="par-txt">
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li class="features-item">
+            <div class="features-icon-block">
+              <svg class="" width="70px" height="70px">
+                <use href="./images/sprite.svg#icon-features-clock"></use>
+              </svg>
+            </div>
+
+            <h3>Планирование</h3>
+            <p class="par-txt">
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li class="features-item">
+            <div class="features-icon-block">
+              <svg class="" width="70px" height="70px">
+                <use href="./images/sprite.svg#icon-features-diagram"></use>
+              </svg>
+            </div>
+
+            <h3>Современные технологии</h3>
+            <p class="par-txt">
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!-- section Преимущества компании conteiner -->
+    <!-- <section class="features">
+      <div class="conteiner">
         <h2 class="is-hidden">
           Преимущества нашей компании
         </h2>
         <ul class="features-groupe"> 
           <li class="features-box-content icon-antena">
-            <!-- <img class="img-features" src="./images/features/antena.svg" alt="иконка радара для поиска"/> -->
             <h3>Внимание к деталям</h3>
             <p class="par-txt">
               Идейные соображения, а также начало повседневной работы по
@@ -91,7 +150,7 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
     <!-- Чем мы занимаемся conteiner  -->
     <section class="doing">
