оформил графичесую часть
в хедере - иконки  и подчеркивание
в преимуществах  через инлайн SVG
в чем занимаемся - через позиционирование
в команде - спрайт
в наши клиенты - спрайт
в футере - инлайн SVG

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,28 +12,40 @@
   </head>
 <body>
 
-  <!-- Шапка сайта с навигацией conteiner яя -->
+  <!-- Шапка сайта с навигацией conteiner -->
   <header class="header-nav">
     <div class="conteiner">
-      <a href="#" class="logo">
+      <a class="logo" href="#">
         <b>Web&nbsp;<span class="logo-black">Studio</span></b>
       </a>        
       <nav>
-        <ul class="site-nav">
-          <li class="item"><a class="link " href="./index.html">Студия</a></li>
-          <li class="item"><a class="link activ" href="./portfolio.html">Портфолио</a></li>
-          <li class="item"><a class="link" href="./contact.html">Контакты</a></li>
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html">Студия</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link activ" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./contact.html">Контакты</a>
+          </li>
         </ul>
       </nav>
-      <ul class="contacts-links">
-        <li class="item">
-          <a class="link mail" href="mailto:info@devstudio.com" >
+      <ul class="contacts-list">
+        <li class="contacts-item">
+          <a class="contacts-link  envelope" href="mailto:info@devstudio.com" >
+            <svg class="icon-header" width="16" height="12">
+              <use href="./images/sprite.svg#icon-envelope"></use>
+            </svg>
             info@devstudio.com
           </a>
         </li>
-        <li class="item">
-          <a class="link phone" href="tel:+380961111111">
-            &plus;38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
+        <li class="contacts-item">
+          <a class="contacts-link  phone" href="tel:+380961111111">
+            <svg class="icon-header" width="10" height="15">
+              <use href="./images/sprite.svg#icon-phone"></use>
+            </svg>
+           +38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
           </a>
         </li>
       </ul>
