--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,45 @@
     <link rel="stylesheet" href="./css/svg.css">
   </head>
 <body>
+  <!-- Шапка сайта с навигацией conteiner -->
+  <header class="header-nav">
+    <div class="conteiner">
+      <a class="logo" href="#">
+        <b>Web&nbsp;<span class="logo-black">Studio</span></b>
+      </a>        
+      <nav>
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html">Студия</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link  activ" href="./contact.html">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="contacts-list">
+        <li class="contacts-item">
+          <a class="contacts-link  envelope" href="mailto:info@devstudio.com" >
+            <svg class="icon-header" width="16" height="12">
+              <use href="./images/sprite.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com
+          </a>
+        </li>
+        <li class="contacts-item">
+          <a class="contacts-link  phone" href="tel:+380961111111">
+            <svg class="icon-header" width="10" height="15">
+              <use href="./images/sprite.svg#icon-phone"></use>
+            </svg>
+           +38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
+          </a>
+        </li>
+      </ul>
+    </div>
+  </header>
   <div class="o-layout o-layout--landing" data-o-component="o-layout"> 
     <div class="o-layout__hero o-layout-typography o-website__hero--home"> 
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1600 470">
