--- a/index.html
+++ b/index.html
@@ -19,21 +19,37 @@
         <b>Web&nbsp;<span class="logo-black">Studio</span></b>
       </a>        
       <nav>
-        <ul class="site-nav">
-          <li class="item"><a class="link  activ" href="./index.html">Студия</a></li>
-          <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
-          <li class="item"><a class="link" href="./contact.html">Контакты</a></li>
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a class="nav-link activ" href="./index.html">Студия</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./contact.html">Контакты</a>
+          </li>
         </ul>
       </nav>
-      <ul class="contacts-links">
-        <li class="item">
-          <a class="link mail" href="mailto:info@devstudio.com" >
+      <ul class="contacts-list">
+        <li class="contacts-item">
+          <a class="contacts-link envelope" href="mailto:info@devstudio.com" >
+            <div class="icon-header">
+              <svg width="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+            </div>
             info@devstudio.com
           </a>
         </li>
-        <li class="item">
-          <a class="link phone" href="tel:+380961111111">
-            &plus;38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
+        <li class="contacts-item">
+          <a class="contacts-link phone" href="tel:+380961111111">
+            <div class="icon-header">
+              <svg  width="10" height="15">
+                <use href="./images/sprite.svg#icon-phone"></use>
+              </svg>
+            </div>
+           +38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
           </a>
         </li>
       </ul>
@@ -51,7 +67,6 @@
         </a>
       </div> 
     </section>
-
 
     <!-- Преимущества компании -->
     <section class="features">
@@ -113,45 +128,7 @@
         </ul>
       </div>
     </section>
-    <!-- section Преимущества компании conteiner -->
-    <!-- <section class="features">
-      <div class="conteiner">
-        <h2 class="is-hidden">
-          Преимущества нашей компании
-        </h2>
-        <ul class="features-groupe"> 
-          <li class="features-box-content icon-antena">
-            <h3>Внимание к деталям</h3>
-            <p class="par-txt">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li class="features-box-content icon-clock">
-            <h3>Пунктуальность</h3>
-            <p class="par-txt">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li class="features-box-content icon-diagram">
-            <h3>Планирование</h3>
-            <p class="par-txt">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li class="features-box-content icon-astronaut">
-            <h3>Современные технологии</h3>
-            <p class="par-txt">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
-      </div>
-    </section> -->
-
+  
     <!-- Чем мы занимаемся conteiner  -->
     <section class="doing">
       <div class="conteiner">
