--- a/portfolio.html
+++ b/portfolio.html
@@ -33,18 +33,22 @@
       </nav>
       <ul class="contacts-list">
         <li class="contacts-item">
-          <a class="contacts-link  envelope" href="mailto:info@devstudio.com" >
-            <svg class="icon-header" width="16" height="12">
-              <use href="./images/sprite.svg#icon-envelope"></use>
-            </svg>
+          <a class="contacts-link envelope" href="mailto:info@devstudio.com" >
+            <div class="icon-header">
+              <svg width="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+            </div>
             info@devstudio.com
           </a>
         </li>
         <li class="contacts-item">
-          <a class="contacts-link  phone" href="tel:+380961111111">
-            <svg class="icon-header" width="10" height="15">
-              <use href="./images/sprite.svg#icon-phone"></use>
-            </svg>
+          <a class="contacts-link phone" href="tel:+380961111111">
+            <div class="icon-header">
+              <svg  width="10" height="15">
+                <use href="./images/sprite.svg#icon-phone"></use>
+              </svg>
+            </div>
            +38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
           </a>
         </li>
