добавил фокус и актив при наведении на активные элементы
за исключением соцсетей в команде

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </nav>
       <ul class="contacts-list">
         <li class="contacts-item">
-          <a class="contacts-link envelope" href="mailto:info@devstudio.com" >
+          <a class="contacts-link" href="mailto:info@devstudio.com" >
             <div class="icon-header">
               <svg width="16" height="12">
                 <use href="./images/sprite.svg#icon-envelope"></use>
@@ -43,7 +43,7 @@
           </a>
         </li>
         <li class="contacts-item">
-          <a class="contacts-link phone" href="tel:+380961111111">
+          <a class="contacts-link" href="tel:+380961111111">
             <div class="icon-header">
               <svg  width="10" height="15">
                 <use href="./images/sprite.svg#icon-phone"></use>
@@ -176,30 +176,30 @@
           <li class="command-box employee-a">
             <h3>John Smith</h3>
             <p>Product Designer</p>
-            <ul class="command-soc-link">
-              <li>
-                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть инстаграм">
+            <ul class="command-soc-list">
+              <li class="command-soc-item">
+                <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть инстаграм">
                   <svg class="command-soc-icon" width="20px" height="20px">
                     <use href="./images/sprite.svg#icon-soc-ig"></use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть твиттер">
+              <li class="command-soc-item">
+                <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть твиттер">
                   <svg class="command-soc-icon" width="20px" height="16px">
                     <use href="./images/sprite.svg#icon-soc-tw"></use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
+              <li class="command-soc-item">
+                <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
                   <svg class="command-soc-icon" width="10" height="20">
                     <use href="./images/sprite.svg#icon-soc-fb"></use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть линкед ин">
+              <li class="command-soc-item">
+                <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть линкед ин">
                   <svg class="command-soc-icon" width="13" height="14">
                     <use href="./images/sprite.svg#icon-soc-in"></use>
                   </svg>
@@ -210,30 +210,30 @@
           <li class="command-box employee-b">
             <h3>Marta Stewart</h3>
             <p>Frontend Developer</p>
-            <ul class="command-soc-link">
-              <li>
-                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть инстаграм">
+            <ul class="command-soc-list">
+              <li class="command-soc-item">
+                <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть инстаграм">
                   <svg class="command-soc-icon" width="20px" height="20px">
                     <use href="./images/sprite.svg#icon-soc-ig"></use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть твиттер">
+              <li class="command-soc-item">
+                <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть твиттер">
                   <svg class="command-soc-icon" width="20px" height="16px">
                     <use href="./images/sprite.svg#icon-soc-tw"></use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
+              <li class="command-soc-item">
+                <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
                   <svg class="command-soc-icon" width="10" height="20">
                     <use href="./images/sprite.svg#icon-soc-fb"></use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть линкед ин">
+              <li class="command-soc-item">
+                <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть линкед ин">
                   <svg class="command-soc-icon" width="13" height="14">
                     <use href="./images/sprite.svg#icon-soc-in"></use>
                   </svg>
@@ -244,30 +244,30 @@
           <li class="command-box employee-c">
             <h3>Robert Jakis</h3>
             <p>Marketing</p>
-            <ul class="command-soc-link">
-              <li>
-                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть инстаграм">
+            <ul class="command-soc-list">
+              <li class="command-soc-item">
+                <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть инстаграм">
                   <svg class="command-soc-icon" width="20px" height="20px">
                     <use href="./images/sprite.svg#icon-soc-ig"></use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть твиттер">
+              <li class="command-soc-item">
+                <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть твиттер">
                   <svg class="command-soc-icon" width="20px" height="16px">
                     <use href="./images/sprite.svg#icon-soc-tw"></use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
+              <li class="command-soc-item">
+                <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
                   <svg class="command-soc-icon" width="10" height="20">
                     <use href="./images/sprite.svg#icon-soc-fb"></use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть линкед ин">
+              <li class="command-soc-item">
+                <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть линкед ин">
                   <svg class="command-soc-icon" width="13" height="14">
                     <use href="./images/sprite.svg#icon-soc-in"></use>
                   </svg>
@@ -278,30 +278,30 @@
           <li class="command-box employee-d">
             <h3>Martin Doe</h3>
             <p>UI Designer</p>
-            <ul class="command-soc-link">
-              <li>
-                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть инстаграм">
+            <ul class="command-soc-list">
+              <li class="command-soc-item">
+                <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть инстаграм">
                   <svg class="command-soc-icon" width="20px" height="20px">
                     <use href="./images/sprite.svg#icon-soc-ig"></use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть твиттер">
+              <li class="command-soc-item">
+                <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть твиттер">
                   <svg class="command-soc-icon" width="20px" height="16px">
                     <use href="./images/sprite.svg#icon-soc-tw"></use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
+              <li class="command-soc-item">
+                <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
                   <svg class="command-soc-icon" width="10" height="20">
                     <use href="./images/sprite.svg#icon-soc-fb"></use>
                   </svg>
                 </a>
               </li>
-              <li>
-                <a class="command-soc-sprite" href="#" aria-label=" ссылка на социальную сеть линкед ин">
+              <li class="command-soc-item">
+                <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть линкед ин">
                   <svg class="command-soc-icon" width="13" height="14">
                     <use href="./images/sprite.svg#icon-soc-in"></use>
                   </svg>
@@ -371,8 +371,8 @@
   <footer  class="footer-conteiner">
     <div class="conteiner">
       <!-- левая верхняячасть футера -->
-      <div class="footer-left">
-        <a href="#" class="logo"><b>Web&nbsp;<span class="logo-white">Studio</span></b></a>
+      <div class="footer-address">
+        <a  class="logo" href="#"><b>Web&nbsp;<span class="logo-white">Studio</span></b></a>
         <address class="map">
           г. Киев, пр-т Леси Украинки, 26
         </address>
@@ -388,31 +388,31 @@
         <p>
           <b>Присоединяйтесь</b>
         </p>
-        <ul>
-          <li>
-            <a class="button-sprite icons-ig" href="#" aria-label=" ссылка на социальную сеть инстаграм">
-              <svg class="button-icon" width="20px" height="20px">
+        <ul class="footer-cammon-list">
+          <li class="footer-cammon-item">
+            <a class="footer-cammon-link" href="#" aria-label=" ссылка на социальную сеть инстаграм">
+              <svg class="footer-cammon-link" width="20px" height="20px">
                 <use href="./images/sprite.svg#icon-soc-ig"></use>
               </svg>
             </a>
           </li>
-          <li>
-            <a class="button-sprite icons-twit" href="#" aria-label=" ссылка на социальную сеть твиттер">
-              <svg class="button-icon" width="20px" height="16px">
+          <li class="footer-cammon-item">
+            <a class="footer-cammon-link" href="#" aria-label=" ссылка на социальную сеть твиттер">
+              <svg class="footer-cammon-link" width="20px" height="16px">
                 <use href="./images/sprite.svg#icon-soc-tw"></use>
               </svg>
             </a>
           </li>
-          <li>
-            <a class="button-sprite icons-fb" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
-              <svg class="button-icon" width="10" height="20">
+          <li class="footer-cammon-item">
+            <a class="footer-cammon-link" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
+              <svg class="footer-cammon-link" width="10" height="20">
                 <use href="./images/sprite.svg#icon-soc-fb"></use>
               </svg>
             </a>
           </li>
-          <li>
-            <a class="button-sprite icons-in" href="#" aria-label=" ссылка на социальную сеть линкед ин">
-              <svg class="button-icon" width="13" height="14">
+          <li class="footer-cammon-item">
+            <a class="footer-cammon-link" href="#" aria-label=" ссылка на социальную сеть линкед ин">
+              <svg class="footer-cammon-link" width="13" height="14">
                 <use href="./images/sprite.svg#icon-soc-in"></use>
               </svg>
             </a>
