--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,10 @@
       <nav>
         <ul class="nav-list">
           <li class="nav-item">
-            <a class="nav-link" href="./index.html">Студия</a>
+            <a class="nav-link activ" href="./index.html">Студия</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link activ" href="./portfolio.html">Портфолио</a>
+            <a class="nav-link" href="./portfolio.html">Портфолио</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./contact.html">Контакты</a>
@@ -33,7 +33,7 @@
       </nav>
       <ul class="contacts-list">
         <li class="contacts-item">
-          <a class="contacts-link envelope" href="mailto:info@devstudio.com" >
+          <a class="contacts-link" href="mailto:info@devstudio.com" >
             <div class="icon-header">
               <svg width="16" height="12">
                 <use href="./images/sprite.svg#icon-envelope"></use>
@@ -43,7 +43,7 @@
           </a>
         </li>
         <li class="contacts-item">
-          <a class="contacts-link phone" href="tel:+380961111111">
+          <a class="contacts-link" href="tel:+380961111111">
             <div class="icon-header">
               <svg  width="10" height="15">
                 <use href="./images/sprite.svg#icon-phone"></use>
@@ -158,8 +158,8 @@
   <footer  class="footer-conteiner">
     <div class="conteiner">
       <!-- левая верхняячасть футера -->
-      <div class="footer-left">
-        <a href="#" class="logo"><b>Web&nbsp;<span class="logo-white">Studio</span></b></a>
+      <div class="footer-address">
+        <a  class="logo" href="#"><b>Web&nbsp;<span class="logo-white">Studio</span></b></a>
         <address class="map">
           г. Киев, пр-т Леси Украинки, 26
         </address>
@@ -175,31 +175,31 @@
         <p>
           <b>Присоединяйтесь</b>
         </p>
-        <ul>
-          <li>
-            <a class="button-sprite" href="#" aria-label=" ссылка на социальную сеть инстаграм">
-              <svg class="button-icon" width="20px" height="20px">
+        <ul class="footer-cammon-list">
+          <li class="footer-cammon-item">
+            <a class="footer-cammon-link" href="#" aria-label=" ссылка на социальную сеть инстаграм">
+              <svg class="footer-cammon-link" width="20px" height="20px">
                 <use href="./images/sprite.svg#icon-soc-ig"></use>
               </svg>
             </a>
           </li>
-          <li>
-            <a class="button-sprite" href="#" aria-label=" ссылка на социальную сеть твиттер">
-              <svg class="button-icon" width="20px" height="16px">
+          <li class="footer-cammon-item">
+            <a class="footer-cammon-link" href="#" aria-label=" ссылка на социальную сеть твиттер">
+              <svg class="footer-cammon-link" width="20px" height="16px">
                 <use href="./images/sprite.svg#icon-soc-tw"></use>
               </svg>
             </a>
           </li>
-          <li>
-            <a class="button-sprite" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
-              <svg class="button-icon" width="10" height="20">
+          <li class="footer-cammon-item">
+            <a class="footer-cammon-link" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
+              <svg class="footer-cammon-link" width="10" height="20">
                 <use href="./images/sprite.svg#icon-soc-fb"></use>
               </svg>
             </a>
           </li>
-          <li>
-            <a class="button-sprite" href="#" aria-label=" ссылка на социальную сеть линкед ин">
-              <svg class="button-icon" width="13" height="14">
+          <li class="footer-cammon-item">
+            <a class="footer-cammon-link" href="#" aria-label=" ссылка на социальную сеть линкед ин">
+              <svg class="footer-cammon-link" width="13" height="14">
                 <use href="./images/sprite.svg#icon-soc-in"></use>
               </svg>
             </a>
