--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
       </nav>
       <ul class="contacts-list">
         <li class="contacts-item">
-          <a class="contacts-link envelope" href="mailto:info@devstudio.com" >
+          <a class="contacts-link" href="mailto:info@devstudio.com" >
             <div class="icon-header">
               <svg width="16" height="12">
                 <use href="./images/sprite.svg#icon-envelope"></use>
@@ -44,13 +44,13 @@
           </a>
         </li>
         <li class="contacts-item">
-          <a class="contacts-link phone" href="tel:+380961111111">
+          <a class="contacts-link" href="tel:+380961111111">
             <div class="icon-header">
               <svg  width="10" height="15">
                 <use href="./images/sprite.svg#icon-phone"></use>
               </svg>
             </div>
-            +38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
+           +38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
           </a>
         </li>
       </ul>
@@ -75,5 +75,84 @@
     </div>               
   <script src="https://cdn.polyfill.io/v3/polyfill.min.js?features=Array.from,Array.isArray,Array.prototype.entries,Array.prototype.filter,Array.prototype.forEach,Array.prototype.includes,Array.prototype.indexOf,Array.prototype.keys,Array.prototype.map,Array.prototype.reduce,ArrayBuffer,console,CustomEvent,document,Element,Function.prototype.bind,JSON,Map,Object.assign,Object.defineProperty,Object.entries,Object.getOwnPropertyDescriptor,Object.keys,Set,String.prototype.includes,String.prototype.trim,Symbol,Symbol.iterator,URLSearchParams,WeakMap,WeakSet"></script>
   <script src="/v3/js.f8c30278.js"></script> 
+
+    <!-- подвал conteiner -->
+    <footer  class="footer-conteiner">
+      <div class="conteiner">
+        <!-- левая верхняячасть футера -->
+        <div class="footer-address">
+          <a  class="logo" href="#"><b>Web&nbsp;<span class="logo-white">Studio</span></b></a>
+          <address class="map">
+            г. Киев, пр-т Леси Украинки, 26
+          </address>
+          <a class="mail-content">
+            info@devstudio.com
+          </a>
+          <a class="tel-content">
+            &plus;38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
+          </a>
+        </div>
+        <!-- средняя верхняя часть футера -->
+        <div class="footer-cammon">
+          <p>
+            <b>Присоединяйтесь</b>
+          </p>
+          <ul class="footer-cammon-list">
+            <li class="footer-cammon-item">
+              <a class="footer-cammon-link" href="#" aria-label=" ссылка на социальную сеть инстаграм">
+                <svg class="footer-cammon-link" width="20px" height="20px">
+                  <use href="./images/sprite.svg#icon-soc-ig"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-cammon-item">
+              <a class="footer-cammon-link" href="#" aria-label=" ссылка на социальную сеть твиттер">
+                <svg class="footer-cammon-link" width="20px" height="16px">
+                  <use href="./images/sprite.svg#icon-soc-tw"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-cammon-item">
+              <a class="footer-cammon-link" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
+                <svg class="footer-cammon-link" width="10" height="20">
+                  <use href="./images/sprite.svg#icon-soc-fb"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-cammon-item">
+              <a class="footer-cammon-link" href="#" aria-label=" ссылка на социальную сеть линкед ин">
+                <svg class="footer-cammon-link" width="13" height="14">
+                  <use href="./images/sprite.svg#icon-soc-in"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>      
+  
+        <!-- правая верхняя часть футера с подпиской -->
+        <div class="subscribe-box">
+          <form action="forma">
+            <p>
+              <b>Подпишитесь на рассылку</b>
+            </p>
+            <div class="subscribe-box-send">
+              <input type="text" value="E-mail">
+              <a class="subscribe-box-button" href="#">
+                <b>Подписаться</b>
+                <svg class="subscribe-icon-button">
+                  <use href="./images/sprite.svg#icon-send"></use>
+                </svg>
+              </a>
+            </div>
+          </form>
+        </div>        
+      </div> 
+  
+      <!-- общяя\центральная нижняя часть футера -->
+      <p class="developed">
+        2020 | Developed by GoIT Students
+      </p>
+    </footer>
+
 </body>
 </html>
