--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,10 @@
       <nav>
         <ul class="nav-list">
           <li class="nav-item">
-            <a class="nav-link activ" href="./index.html">Студия</a>
+            <a class="nav-link" href="./index.html">Студия</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./portfolio.html">Портфолио</a>
+            <a class="nav-link activ" href="./portfolio.html">Портфолио</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./contact.html">Контакты</a>
