--- a/portfolio.html
+++ b/portfolio.html
@@ -154,7 +154,7 @@
   </ul>
  </main>
 
-  <!-- подвал conteiner -->
+  <!-- подвал conteiner копия как в главной стринице-->
   <footer  class="footer-conteiner">
     <div class="conteiner">
       <!-- левая верхняячасть футера -->
@@ -205,8 +205,7 @@
             </a>
           </li>
         </ul>
-      </div>      
-
+      </div>   
       <!-- правая верхняя часть футера с подпиской -->
       <div class="subscribe-box">
         <form action="forma">
@@ -225,7 +224,6 @@
         </form>
       </div>        
     </div> 
-
     <!-- общяя\центральная нижняя часть футера -->
     <p class="developed">
       2020 | Developed by GoIT Students
