доделал фокус и актив на соц сетях команді
исправил

--- a/index.html
+++ b/index.html
@@ -179,28 +179,28 @@
             <ul class="command-soc-list">
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть инстаграм">
-                  <svg class="command-soc-icon" width="20px" height="20px">
+                  <svg class="command-soc-icon" width="44px" height="44px">
                     <use href="./images/sprite.svg#icon-soc-ig"></use>
                   </svg>
                 </a>
               </li>
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть твиттер">
-                  <svg class="command-soc-icon" width="20px" height="16px">
+                  <svg class="command-soc-icon" width="44px" height="44px">
                     <use href="./images/sprite.svg#icon-soc-tw"></use>
                   </svg>
                 </a>
               </li>
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
-                  <svg class="command-soc-icon" width="10" height="20">
+                  <svg class="command-soc-icon" width="44px" height="44px">
                     <use href="./images/sprite.svg#icon-soc-fb"></use>
                   </svg>
                 </a>
               </li>
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть линкед ин">
-                  <svg class="command-soc-icon" width="13" height="14">
+                  <svg class="command-soc-icon" width="44px" height="44px">
                     <use href="./images/sprite.svg#icon-soc-in"></use>
                   </svg>
                 </a>
@@ -213,28 +213,28 @@
             <ul class="command-soc-list">
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть инстаграм">
-                  <svg class="command-soc-icon" width="20px" height="20px">
+                  <svg class="command-soc-icon" width="44px" height4420px">
                     <use href="./images/sprite.svg#icon-soc-ig"></use>
                   </svg>
                 </a>
               </li>
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть твиттер">
-                  <svg class="command-soc-icon" width="20px" height="16px">
+                  <svg class="command-soc-icon" width="44px" height4416px">
                     <use href="./images/sprite.svg#icon-soc-tw"></use>
                   </svg>
                 </a>
               </li>
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
-                  <svg class="command-soc-icon" width="10" height="20">
+                  <svg class="command-soc-icon" width="44" height="44">
                     <use href="./images/sprite.svg#icon-soc-fb"></use>
                   </svg>
                 </a>
               </li>
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть линкед ин">
-                  <svg class="command-soc-icon" width="13" height="14">
+                  <svg class="command-soc-icon" width="44" height="44">
                     <use href="./images/sprite.svg#icon-soc-in"></use>
                   </svg>
                 </a>
@@ -247,28 +247,28 @@
             <ul class="command-soc-list">
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть инстаграм">
-                  <svg class="command-soc-icon" width="20px" height="20px">
+                  <svg class="command-soc-icon" width="44px" height4420px">
                     <use href="./images/sprite.svg#icon-soc-ig"></use>
                   </svg>
                 </a>
               </li>
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть твиттер">
-                  <svg class="command-soc-icon" width="20px" height="16px">
+                  <svg class="command-soc-icon" width="44px" height4416px">
                     <use href="./images/sprite.svg#icon-soc-tw"></use>
                   </svg>
                 </a>
               </li>
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
-                  <svg class="command-soc-icon" width="10" height="20">
+                  <svg class="command-soc-icon" width="44" height="44">
                     <use href="./images/sprite.svg#icon-soc-fb"></use>
                   </svg>
                 </a>
               </li>
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть линкед ин">
-                  <svg class="command-soc-icon" width="13" height="14">
+                  <svg class="command-soc-icon" width="44" height="44">
                     <use href="./images/sprite.svg#icon-soc-in"></use>
                   </svg>
                 </a>
@@ -281,28 +281,28 @@
             <ul class="command-soc-list">
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть инстаграм">
-                  <svg class="command-soc-icon" width="20px" height="20px">
+                  <svg class="command-soc-icon" width="44px" height4420px">
                     <use href="./images/sprite.svg#icon-soc-ig"></use>
                   </svg>
                 </a>
               </li>
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть твиттер">
-                  <svg class="command-soc-icon" width="20px" height="16px">
+                  <svg class="command-soc-icon" width="44px" height4416px">
                     <use href="./images/sprite.svg#icon-soc-tw"></use>
                   </svg>
                 </a>
               </li>
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
-                  <svg class="command-soc-icon" width="10" height="20">
+                  <svg class="command-soc-icon" width="44" height="44">
                     <use href="./images/sprite.svg#icon-soc-fb"></use>
                   </svg>
                 </a>
               </li>
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть линкед ин">
-                  <svg class="command-soc-icon" width="13" height="14">
+                  <svg class="command-soc-icon" width="44" height="44">
                     <use href="./images/sprite.svg#icon-soc-in"></use>
                   </svg>
                 </a>
