--- a/portfolio.html
+++ b/portfolio.html
@@ -159,16 +159,18 @@
     <div class="conteiner">
       <!-- левая верхняячасть футера -->
       <div class="footer-address">
-        <a  class="logo" href="#"><b>Web&nbsp;<span class="logo-white">Studio</span></b></a>
+        <a  class="logo" href="#">
+          <b>Web&nbsp;<span class="logo-white">Studio</span></b>
+        </a>
         <address class="map">
           г. Киев, пр-т Леси Украинки, 26
         </address>
-        <a class="mail-content">
+        <p class="mail-content">
           info@devstudio.com
-        </a>
-        <a class="tel-content">
+        </p>
+        <p class="tel-content">
           &plus;38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
-        </a>
+        </p>
       </div>
       <!-- средняя верхняя часть футера -->
       <div class="footer-cammon">
