--- a/index.html
+++ b/index.html
@@ -179,28 +179,28 @@
             <ul class="command-soc-list">
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть инстаграм">
-                  <svg class="command-soc-icon" width="44px" height="44px">
+                  <svg class="command-soc-icon" width="44" height="44">
                     <use href="./images/sprite.svg#icon-soc-ig"></use>
                   </svg>
                 </a>
               </li>
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть твиттер">
-                  <svg class="command-soc-icon" width="44px" height="44px">
+                  <svg class="command-soc-icon" width="44" height="44">
                     <use href="./images/sprite.svg#icon-soc-tw"></use>
                   </svg>
                 </a>
               </li>
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть фэйсбук">
-                  <svg class="command-soc-icon" width="44px" height="44px">
+                  <svg class="command-soc-icon" width="44" height="44">
                     <use href="./images/sprite.svg#icon-soc-fb"></use>
                   </svg>
                 </a>
               </li>
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть линкед ин">
-                  <svg class="command-soc-icon" width="44px" height="44px">
+                  <svg class="command-soc-icon"width="44" height="44">
                     <use href="./images/sprite.svg#icon-soc-in"></use>
                   </svg>
                 </a>
@@ -213,14 +213,14 @@
             <ul class="command-soc-list">
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть инстаграм">
-                  <svg class="command-soc-icon" width="44px" height4420px">
+                  <svg class="command-soc-icon" width="44" height="44">
                     <use href="./images/sprite.svg#icon-soc-ig"></use>
                   </svg>
                 </a>
               </li>
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть твиттер">
-                  <svg class="command-soc-icon" width="44px" height4416px">
+                  <svg class="command-soc-icon" width="44" height="44">
                     <use href="./images/sprite.svg#icon-soc-tw"></use>
                   </svg>
                 </a>
@@ -247,14 +247,14 @@
             <ul class="command-soc-list">
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть инстаграм">
-                  <svg class="command-soc-icon" width="44px" height4420px">
+                  <svg class="command-soc-icon" width="44" height="44">
                     <use href="./images/sprite.svg#icon-soc-ig"></use>
                   </svg>
                 </a>
               </li>
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть твиттер">
-                  <svg class="command-soc-icon" width="44px" height4416px">
+                  <svg class="command-soc-icon" width="44" height="44">
                     <use href="./images/sprite.svg#icon-soc-tw"></use>
                   </svg>
                 </a>
@@ -281,14 +281,14 @@
             <ul class="command-soc-list">
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть инстаграм">
-                  <svg class="command-soc-icon" width="44px" height4420px">
+                  <svg class="command-soc-icon" width="44" height="44">
                     <use href="./images/sprite.svg#icon-soc-ig"></use>
                   </svg>
                 </a>
               </li>
               <li class="command-soc-item">
                 <a class="command-soc-link" href="#" aria-label=" ссылка на социальную сеть твиттер">
-                  <svg class="command-soc-icon" width="44px" height4416px">
+                  <svg class="command-soc-icon" width="44" height="44">
                     <use href="./images/sprite.svg#icon-soc-tw"></use>
                   </svg>
                 </a>
