--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <ul class="features-list"> 
           <li class="features-item">
             <div class="features-icon-block">
-              <svg class="features-icon" width="70" height="70">
+              <svg class="features-icon" width="70" height="70" aria-label="мы крутые и этим все сказано">
                 <use href="./images/sprite.svg#icon-features-antenna"></use>
               </svg>
             </div>
@@ -89,7 +89,7 @@
           </li>
           <li class="features-item">
             <div class="features-icon-block">
-              <svg class="" width="70px" height="70px">
+              <svg class="" width="70" height="70" aria-label="мы крутые и этим все сказано">
                 <use href="./images/sprite.svg#icon-features-astronaut"></use>
               </svg>
             </div>
@@ -101,7 +101,7 @@
           </li>
           <li class="features-item">
             <div class="features-icon-block">
-              <svg class="" width="70px" height="70px">
+              <svg class="" width="70" height="70" aria-label="мы крутые и этим все сказано">
                 <use href="./images/sprite.svg#icon-features-clock"></use>
               </svg>
             </div>
@@ -155,7 +155,7 @@
             </li>
             <li class="block-doing-txt">
               <div class="position-block-doing">
-                <img  class="img-box" src="./images/portfolio/f-min.jpg" alt="фотография с гравической программой" />
+                <img  class="img-box" src="./images/portfolio/f-min.jpg" alt="фотография с графической программой" />
                 <h3 class="doing-txt">
                   Дизайнерские решения
                 </h3>
@@ -322,42 +322,42 @@
         <ul class="clients-list">
           <li class="clients-item">
             <a class="clients-link" href="#">
-              <svg class="clients-icon" width="45" height="50">
+              <svg class="clients-icon" width="45" height="50" aria-label=" компания Рога и Копыта нагибатор">
                 <use href="./images/sprite.svg#icon-client-a"></use>
               </svg>
             </a>
           </li>
           <li class="clients-item">
             <a  class="clients-link" href="#">
-              <svg class="clients-icon" width="40" height="52">
+              <svg class="clients-icon" width="40" height="52" aria-label=" компания Рога и Копыта нагибатор">
                 <use href="./images/sprite.svg#icon-client-b"></use>
               </svg>
             </a>
           </li>
           <li class="clients-item">
             <a  class="clients-link" href="#">
-              <svg class="clients-icon" width="41" height="43">
+              <svg class="clients-icon" width="41" height="43" aria-label=" компания Рога и Копыта нагибатор">
                 <use href="./images/sprite.svg#icon-client-c"></use>
               </svg>
             </a>
           </li>
           <li class="clients-item">
             <a  class="clients-link" href="#">
-              <svg class="clients-icon" width="80" height="42">
+              <svg class="clients-icon" width="80" height="42" aria-label=" компания Рога и Копыта нагибатор">
                 <use href="./images/sprite.svg#icon-client-d"></use>
               </svg>
             </a>
           </li>
           <li class="clients-item">
             <a class="clients-link" href="#">
-              <svg class="clients-icon" width="59" height="47">
+              <svg class="clients-icon" width="59" height="47" aria-label=" компания Рога и Копыта нагибатор">
                 <use href="./images/sprite.svg#icon-client-e"></use>
               </svg>
             </a>
           </li>
           <li class="clients-item">
             <a class="clients-link" href="#">
-              <svg class="clients-icon" width="89" height="46">
+              <svg class="clients-icon" width="89" height="46" aria-label=" компания Рога и Копыта нагибатор">
                 <use href="./images/sprite.svg#icon-client-f"></use>
               </svg>
             </a>
